Add exceptions to ProgramControlTest